tests/ui/sanitize/sanitizer-cfi-invalid-attr-cfi-encoding.stderr
error: malformed `cfi_encoding` attribute input
  --> $DIR/sanitizer-cfi-invalid-attr-cfi-encoding.rs:10:1
   |
LL | #[cfi_encoding]
   | ^^^^^^^^^^^^^^^ help: must be of the form: `#[cfi_encoding = "encoding"]`

error: aborting due to previous error

